# TrimPy

./: .gitignore  CONTRIBUTING.md  README.md  setup.cfg  setup.py  trimlight.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: codeql.yml  publish.yml  pylint.yml
src/TrimPy/: __init__.py  __main__.py  helpers.py  message.py
src/TrimPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/TrimPy/enum/: animation.py  mode.py  pattern.py  trim.py
src/TrimPy/messages/: helpers.py  message.py  parser.py
