[metadata]
name = TrimPy
version = 0.1.0
author = Ethan Dye
author_email = mrtops03@gmail.com
description = A tool for interfacing with Trimlight Select systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecdye/TrimPy
project_urls =
    Bug Tracker = https://github.com/ecdye/TrimPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    TrimPy
    TrimPy.enum
python_requires = >=3.6
